# fp-course

./: .ghci  INSTALL  README  README.markdown  course.cabal
projects/TicTacToe/haskell/: .ghci  .gitignore  LICENSE  changelog  tictactoe.cabal
projects/TicTacToe/haskell/src/: TicTacToe.hs
projects/TicTacToe/haskell/src/Data/TicTacToe/: Board.hs  Interact.hs  Player.hs  Position.hs
projects/TicTacToe/haskell/src/TicTacToe/: AsOccupied.hs  AsOr.hs  AsWin.hs  Back.hs  Console.hs  Draw.hs  Move.hs  MoveOr.hs  OccupiedOr.hs  Player.hs  Position.hs  WinOccupiedOr.hs  Winpaths.hs  WithPosition.hs
projects/TicTacToe/haskell/test/: doctests.hs
projects/TicTacToe/idris/: TicTacToe.idr
src/: Course.hs
src/Algorithm/: Anagrams.hs  Cheque.hs  EditDistance.hs  FastAnagrams.hs
src/Course/: Alternative.hs  Anagrams.hs  Applicative.hs  Apply.hs  Bind.hs  Cheque.hs  Comonad.hs  Compose.hs  Extend.hs  FastAnagrams.hs  FileIO.hs  Functor.hs  Interactive.hs  JsonParser.hs  List.hs  ListZipper.hs  Monad.hs  MoreParser.hs  Optional.hs  Parser.hs  State.hs  StateT.hs  Traversable.hs
src/L02/: List.hs
src/L03/: Fuunctor.hs  Moonad.hs  State.hs
src/Monad/: Compose.hs  Functor.hs
src/Parser/: JsonParser.hs  MoreParser.hs  Parser.hs
src/Structure/: BKTree.hs
test/src/L02/List/: Tests.hs
