name:               tictactoe
version:            0.1.0
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2010-2013 Tony Morris
copyright:          Copyright (C) 2012-2015 NICTA Limited
synopsis:           A model of the game of Tic-Tac-Toe
category:           Data
description:        
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  A model of the game of Tic-Tac-Toe enforcing game properties with types

homepage:           https://github.com/NICTA/course
bug-reports:        https://github.com/NICTA/course/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:NICTA/course.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base   >= 4   && < 5
                    , lens   >= 4   && < 5
                    , tagged >= 0.8 && < 0.9
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    TicTacToe
                    TicTacToe.AsOccupied
                    TicTacToe.AsOr
                    TicTacToe.AsWin
                    TicTacToe.Back
                    TicTacToe.Draw
                    TicTacToe.Move
                    TicTacToe.MoveOr
                    TicTacToe.Player
                    TicTacToe.Position
                    TicTacToe.OccupiedOr
                    TicTacToe.WinOccupiedOr
                    TicTacToe.Winpaths
                    TicTacToe.WithPosition

executable tictactoe
  default-language:
                    Haskell2010

  build-depends:    
                      base   >= 4   && < 5
                    , lens   >= 4   && < 5
                    , tagged >= 0.8 && < 0.9
                    , ansi-terminal

  hs-source-dirs:   
                    src

  main-is:          
                    TicTacToe/Console.hs

  ghc-options:      
                    -Wall


test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
